--- a/info/index.html
+++ b/info/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name='description' content='Information Page for a WebRetro Fork'>.
 		<title>Information | webretro</title>
 		<style>
 			body {
