--- a/info/index.html
+++ b/info/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 	<head>
 		<meta charset="UTF-8">
 		<meta name='description' content='Information Page for a WebRetro Fork'>.
